--- a/src/App.scss
+++ b/src/App.scss
@@ -204,20 +204,21 @@ h2 {
   visibility: hidden;
 }
 
+.black-container {
+  position: absolute;
+  width: 700px;
+  height: 600px;
+  top: 0;
+  right: 0;
+  background-color: #1f1f1f;
+  z-index: 10000;
+}
+
 .img-container {
   width: 700px;
   height: 600px;
   position: relative;
   overflow: hidden;
-  &:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    background-color: #1f1f1f;
-  }
   img {
     width: 700px;
     position: absolute;
