--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,9 @@ $background-color-light: #ffffff;
 }
 
 @include parallax-init;
+h4 {
+  text-transform: uppercase;
+}
 
 body.dark-mode {
   font: 100% $font-stack;
@@ -64,9 +67,9 @@ body.dark-mode {
   .modeIcon {
     background-image: url(assets/moon.svg);
   }
-}
-h4 {
-  text-transform: uppercase;
+  .black-container {
+    background-color: #ffffff;
+  }
 }
 
 body {
@@ -83,6 +86,18 @@ body {
   .modeIcon {
     background-image: url(assets/sun.svg);
   }
+  .row {
+    margin-bottom: 15px;
+  }
+  .black-container {
+    background-color: #1f1f1f;
+  }
+}
+
+.black-container {
+  position: absolute;
+  top: 0;
+  z-index: 10000;
 }
 
 html {
@@ -138,9 +153,24 @@ h2 {
 
 .grid1 {
   display: grid;
-  min-height: 30rem;
-  grid-template-columns: 20fr 5fr 20fr 5fr 20fr 5fr 20fr;
-  grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(12, 100px);
+}
+
+@media (min-width: 600px) {
+  .grid1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 900px) {
+  .grid1 {
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    grid-template-rows: repeat(12, 100px);
+    grid-gap: 2rem;
+  }
 }
 
 .mainContainer {
@@ -154,29 +184,10 @@ h2 {
 
 .mainImg {
   position: absolute;
-  width: 70%;
-  height: 70%;
-  top: 15%;
-  left: 15%;
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  z-index: 2000;
   background-size: cover;
-}
-
-@keyframes magic {
-  0% {
-    -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 50%, 0% 50%);
-    clip-path: polygon(0 50%, 100% 50%, 100% 50%, 0% 50%);
-  }
-  20% {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  }
-}
-
-.inset {
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  animation: magic 4s infinite;
 }
 
 .pageMainImg {
@@ -204,24 +215,10 @@ h2 {
   visibility: hidden;
 }
 
-.black-container {
-  position: absolute;
-  width: 700px;
-  height: 600px;
-  top: 0;
-  right: 0;
-  background-color: #1f1f1f;
-  z-index: 10000;
-}
-
 .img-container {
-  width: 700px;
-  height: 600px;
   position: relative;
   overflow: hidden;
   img {
-    width: 700px;
-    position: absolute;
   }
 }
 
@@ -236,7 +233,6 @@ p {
 
 .p-small {
   font-size: 12px;
-  text-align: right;
 }
 
 .absolute {
@@ -260,4 +256,72 @@ p {
 .textBottom {
   position: absolute;
   bottom: 0;
+}
+
+// .c-projects {
+//   display: block;
+//   padding: 10rem 0;
+// }
+
+// .c-projects_row {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   align-items: stretch;
+// }
+
+// .c-projects_item {
+//   display: flex;
+//   position: relative;
+//   width: 50%;
+//   padding-bottom: 11.42857rem;
+//   padding-left: 5.71429rem;
+// }
+
+// .c-projects_wrap {
+//   height: 100%;
+//   position: relative;
+// }
+
+// .c-projects_wrap img {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   width: 400px;
+//   height: auto;
+// }
+
+// .c-projects_inner {
+//   display: flex;
+//   width: 100%;
+//   height: 100%;
+//   align-items: center;
+// }
+
+// .c-projects_item:nth-child(1) {
+//   padding-right: 10%;
+// }
+
+// .c-projects_item:nth-child(2) {
+//   padding-bottom: 10rem;
+// }
+
+// .c-projects_item:nth-child(3) {
+//   padding-left: 20rem;
+//   margin-bottom: -20rem;
+// }
+
+// .c-projects_item:nth-child(1) .c-projects_inner {
+//   margin-top: 5rem;
+//   padding-bottom: 5rem;
+// }
+
+// .c-projects_item:nth-child(2) .c-projects_inner {
+//   margin-top: -2rem;
+// }
+
+.image-col {
+  padding: 2rem;
 }
