--- a/src/App.scss
+++ b/src/App.scss
@@ -104,16 +104,6 @@ html {
   font-size: 18px;
 }
 
-h1 {
-  font-weight: 500;
-  font-size: 5rem;
-}
-
-h2 {
-  font-weight: 500;
-  font-size: 3rem;
-}
-
 .spacer {
   padding-top: 5rem;
 }
@@ -157,20 +147,6 @@ h2 {
   padding-bottom: 2rem;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(12, 100px);
-}
-
-@media (min-width: 600px) {
-  .grid1 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (min-width: 900px) {
-  .grid1 {
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    grid-template-rows: repeat(12, 100px);
-    grid-gap: 2rem;
-  }
 }
 
 .mainContainer {
@@ -258,70 +234,32 @@ p {
   bottom: 0;
 }
 
-// .c-projects {
-//   display: block;
-//   padding: 10rem 0;
-// }
-
-// .c-projects_row {
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: center;
-//   align-items: stretch;
-// }
-
-// .c-projects_item {
-//   display: flex;
-//   position: relative;
-//   width: 50%;
-//   padding-bottom: 11.42857rem;
-//   padding-left: 5.71429rem;
-// }
-
-// .c-projects_wrap {
-//   height: 100%;
-//   position: relative;
-// }
-
-// .c-projects_wrap img {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   width: 400px;
-//   height: auto;
-// }
-
-// .c-projects_inner {
-//   display: flex;
-//   width: 100%;
-//   height: 100%;
-//   align-items: center;
-// }
-
-// .c-projects_item:nth-child(1) {
-//   padding-right: 10%;
-// }
-
-// .c-projects_item:nth-child(2) {
-//   padding-bottom: 10rem;
-// }
-
-// .c-projects_item:nth-child(3) {
-//   padding-left: 20rem;
-//   margin-bottom: -20rem;
-// }
-
-// .c-projects_item:nth-child(1) .c-projects_inner {
-//   margin-top: 5rem;
-//   padding-bottom: 5rem;
-// }
-
-// .c-projects_item:nth-child(2) .c-projects_inner {
-//   margin-top: -2rem;
-// }
-
 .image-col {
   padding: 2rem;
+}
+
+@media (min-width: 600px) {
+  .grid1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 900px) {
+  h1 {
+    font-size: 5rem;
+    font-weight: 500;
+  }
+  h2 {
+    font-size: 3rem;
+    font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
 }
