--- a/src/App.scss
+++ b/src/App.scss
@@ -256,6 +256,10 @@ p {
   .mainContainer {
     height: 700px;
   }
+  .mainIcon {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -280,5 +284,9 @@ p {
   .mainContainer {
     height: 500px;
     margin-bottom: 3rem;
+  }
+  .mainIcon {
+    width: 50px;
+    height: 50px;
   }
 }
