--- a/src/App.scss
+++ b/src/App.scss
@@ -49,9 +49,6 @@ $background-color-light: #ffffff;
 }
 
 @include parallax-init;
-h4 {
-  text-transform: uppercase;
-}
 
 body.dark-mode {
   font: 100% $font-stack;
@@ -150,6 +147,7 @@ html {
   mix-blend-mode: luminosity;
   background-size: cover;
   overflow: hidden;
+  margin-bottom: 3rem;
 }
 
 .mainImg {
@@ -227,7 +225,10 @@ p {
   padding: 2rem;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 768px) {
+  :root {
+    font-size: 18px;
+  }
   h1 {
     font-size: 5rem;
     font-weight: 500;
@@ -260,12 +261,14 @@ p {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
   h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 500;
   }
   h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-weight: 500;
   }
   .largeText {
     font-size: 5rem;
@@ -281,7 +284,6 @@ p {
   }
   .mainContainer {
     height: 500px;
-    margin-bottom: 3rem;
   }
   .mainIcon {
     width: 70px;
